# nf-core-checkatlas

./: CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  nfcore_log_save_why  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: awsfulltest.yml  awstest.yml  branch.yml  ci.yml  fix-linting.yml
assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  schema_input.json  sendmail_template.txt  slackreport.json
conf/: base.config  test.config  test_full.config
docs/: README.md  output.md  usage.md
lib/: WorkflowCheckatlas.groovy  WorkflowMain.groovy
modules/local/: checkatlas_process.nf  samplesheet_check.nf
modules/nf-core/multiqc/: main.nf
nfcheckatlas/: __init__.py  __main__.py  checkatlas_workflow.nf  checkatlas_workflow.py  nfcheckatlas.py
nfcheckatlas/config/: default_config.yaml
subworkflows/local/: checkatlas_cellranger.nf  checkatlas_scanpy.nf  checkatlas_seurat.nf  read_samplesheet.nf
workflows/: checkatlas.nf
