########################" START TOML FROM CHECKATLAS   ################
[tool.poetry]
name = "nfcheckatlas"
version = "0.0.1"
description="One liner tool to check the quality of your single-cell atlases."
authors = ["becavin-lab"]
readme = "README.md"
license = "MIT"
packages = [{include = "nfcheckatlas"}]
include = ["nfcheckatlas/checkatlas_workflow.nf"]
exclude = ["tests/", ".github", "*dask-worker-space*"]
homepage = "https://checkatlas.readthedocs.io/"
repository = "https://github.com/becavin-lab/nf-core-checkatlas/"
documentation = "https://checkatlas.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.10"
nextflow = "^23.4.2"
multiqc = "^1.14"
checkatlas = "^0.3.0"

[tool.mypy]
no_implicit_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nfcheckatlas = 'nfcheckatlas.__main__:main'
nfcheckatlas-workflow = 'nfcheckatlas.checkatlas_workflow:workflow'


# #######################" START NFCORE TOML   ################
# Config file for Python. Mostly used to configure linting of bin/check_samplesheet.py with Black.
# Should be kept the same as nf-core/tools to avoid fighting with template synchronisation.
[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
known_first_party = ["nf_core"]
multi_line_output = 3
